Подправил вывод Stations + добавил вывод hasConnection