@@ -1,29 +1,28 @@
 package ru.ivan.parse_JSON_CSV;
 
-import lombok.Data;
 import ru.ivan.MySearchFiles;
 
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class MyParseCSV {
 
     public static Map<String, List<MyDate>> csvOutput(String data) {
         MySearchFiles mySearchFiles = new MySearchFiles();
         List<String> dataAddress = mySearchFiles.searchMyFiles(data);
-        List<MyDate> listOfStations = new LinkedList<>();
+        List<MyDate> listOfMyDate = new LinkedList<>();
         Map<String, List<MyDate>> mapOfData = new LinkedHashMap<>();
-        List<String> pathOfJson = dataAddress.stream()
+        List<String> pathOfCsv = dataAddress.stream()
                 .filter(s -> s.endsWith(".csv"))
-                .collect(Collectors.toList());
-        for (String path : pathOfJson) {
-            listOfStations = parseMyCSV(path);
-            mapOfData.put(path, listOfStations);
+                .toList();
+        for (String path : pathOfCsv) {
+            listOfMyDate = parseMyCSV(path);
+            mapOfData.put(path, listOfMyDate);
         }
         return mapOfData;
     }
+
 
     public static List<MyDate> parseMyCSV(String path) {
         List<MyDate> myDate = new ArrayList<>();
